--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,4 +22,9 @@
         android:name="com.example.proyectofinal.ui.slideshow.SlideshowFragment"
         android:label="@string/menu_slideshow"
         tools:layout="@layout/fragment_slideshow" />
+    <fragment
+        android:id="@+id/nav_categoria"
+        android:name="com.example.proyectofinal.ui.Categoria.categoria"
+        android:label="Registro de categoria"
+        tools:layout="@layout/fragment_categoria" />
 </navigation>
