Listado de Categorias

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -18,7 +18,8 @@
             android:title="@string/menu_slideshow" />
 
         <item
-            android:id="@+id/nav_categoria"
+            android:id="@+id/nav_listaCategorias"
             android:title="Registro de categoria" />
+
     </group>
 </menu>
