--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,9 +22,19 @@
         android:name="com.example.proyectofinal.ui.slideshow.SlideshowFragment"
         android:label="@string/menu_slideshow"
         tools:layout="@layout/fragment_slideshow" />
+
     <fragment
         android:id="@+id/nav_categoria"
         android:name="com.example.proyectofinal.ui.Categoria.categoria"
         android:label="Registro de categoria"
         tools:layout="@layout/fragment_categoria" />
+
+
+    <fragment
+        android:id="@+id/nav_listaCategorias"
+        android:name="com.example.proyectofinal.ui.ListaCategoria.ListaCategorias"
+        android:label="Lista de categorias"
+        tools:layout="@layout/fragment_lista_categorias" />
+
+
 </navigation>
