--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,25 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@id/nav_home">
 
     <fragment
         android:id="@+id/nav_home"
         android:name="com.example.proyectofinal.ui.home.HomeFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home" />
-
-    <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.example.proyectofinal.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
-
-    <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.example.proyectofinal.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
 
     <fragment
         android:id="@+id/nav_categoria"
@@ -33,8 +21,13 @@
     <fragment
         android:id="@+id/nav_listaCategorias"
         android:name="com.example.proyectofinal.ui.ListaCategoria.ListaCategorias"
-        android:label="Lista de categorias"
+        android:label="fragment_lista_categorias"
         tools:layout="@layout/fragment_lista_categorias" />
 
 
+    <fragment
+        android:id="@+id/nav_editarCategoria"
+        android:name="com.example.proyectofinal.ui.EditarCategoria.EditarCategoria"
+        android:label="fragment_editar_categoria"
+        tools:layout="@layout/fragment_editar_categoria" />
 </navigation>
