Funcion Guardar productos

--- a/app/src/main/res/layout/fragment_lista_productos.xml
+++ b/app/src/main/res/layout/fragment_lista_productos.xml
@@ -6,13 +6,28 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.ListaProductos.ListaProductos">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btnNuevoPro"
+            android:layout_width="214dp"
+            android:layout_height="wrap_content"
+            android:text="Nuevo Producto"
+            android:layout_marginLeft="200dp"
+            android:textSize="20dp" />
+
+    </LinearLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/RV_lista"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="8dp"
