--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -11,7 +11,11 @@
 
         <item
             android:id="@+id/nav_listaCategorias"
-            android:title="Registro de categoria" />
+            android:title="Lista de categoria" />
+
+        <item
+            android:id="@+id/nav_listaProductos"
+            android:title="Lista de Productos" />
 
     </group>
 </menu>
