--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@id/nav_home "
+    app:startDestination="@id/nav_home"
     tools:ignore="InvalidNavigation">
 
     <fragment
@@ -45,5 +45,12 @@
         android:name="com.example.proyectofinal.ui.ListaProductos.ListaProductos"
         android:label="Lista de Productos"
         tools:layout="@layout/fragment_lista_productos" />
+
+
+    <fragment
+        android:id="@+id/nav_editarProducto"
+        android:name="com.example.proyectofinal.ui.EditarProducto.EditarProducto"
+        android:label="Editar Producto"
+        tools:layout="@layout/fragment_editar_producto" />
 
 </navigation>
