--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -53,4 +53,10 @@
         android:label="Editar Producto"
         tools:layout="@layout/fragment_editar_producto" />
 
+    <fragment
+        android:id="@+id/nav_usuario"
+        android:name="com.example.proyectofinal.ui.Usuario.usuario"
+        android:label="Registro de Usuario"
+        tools:layout="@layout/fragment_usuario" />
+
 </navigation>
