--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -59,4 +59,10 @@
         android:label="Registro de Usuario"
         tools:layout="@layout/fragment_usuario" />
 
+    <fragment
+        android:id="@+id/nav_listaUsuario"
+        android:name="com.example.proyectofinal.ui.ListaUsuario.ListaUsuario"
+        android:label="Lista de Usuarios"
+        tools:layout="@layout/fragment_lista_usuario" />
+
 </navigation>
