--- a/app/src/main/res/layout/fragment_lista_usuario.xml
+++ b/app/src/main/res/layout/fragment_lista_usuario.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.ListaCategoria.ListaCategorias">
+    tools:context=".ui.ListaUsuario.ListaUsuario">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -12,10 +12,12 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/btnNueva"
+            android:id="@+id/btnNuevoUsu"
             android:layout_width="214dp"
             android:layout_height="wrap_content"
-            android:text="Nueva Categoria"
+            android:text="Nuevo Usuario"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="30dp"
             android:background="@drawable/button_stilos"
             android:layout_marginLeft="200dp"
             android:textSize="20dp" />
@@ -37,4 +39,4 @@
 
     </androidx.recyclerview.widget.RecyclerView>
 
-</RelativeLayout>
+</FrameLayout>
