--- a/app/src/main/res/layout/fragment_categoria.xml
+++ b/app/src/main/res/layout/fragment_categoria.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.Categoria.categoria">
+    tools:context=".ui.Categoria.categoria"
+    android:background="@drawable/back">
 
     <!-- TODO: Update blank fragment layout -->
     <com.google.android.material.textfield.TextInputLayout
