--- a/app/src/main/res/layout/fragment_editar_categoria.xml
+++ b/app/src/main/res/layout/fragment_editar_categoria.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.EditarCategoria.EditarCategoria">
+    tools:context=".ui.EditarCategoria.EditarCategoria"
+    android:background="@drawable/back">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/ti_idcategoria"
