--- a/app/src/main/res/layout/fragment_productos.xml
+++ b/app/src/main/res/layout/fragment_productos.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.Producto.productos">
+    tools:context=".ui.Producto.productos"
+    android:background="@drawable/back">
 
     <ScrollView
         android:layout_width="match_parent"
