Arreglos de diseños

--- a/app/src/main/res/layout/fragment_acerca.xml
+++ b/app/src/main/res/layout/fragment_acerca.xml
@@ -1,27 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".Acerca">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
-        <androidx.appcompat.widget.LinearLayoutCompat
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginHorizontal="20dp"
-            android:layout_marginVertical="20dp"
-            android:layout_marginLeft="30dp"
+            android:layout_marginHorizontal="5dp"
+            android:layout_marginVertical="5dp"
             android:layout_marginTop="30dp"
-            android:layout_marginRight="30dp"
-            android:background="@drawable/back"
             android:orientation="vertical">
 
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="20dp"
@@ -32,7 +30,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="5dp"
                 android:layout_marginTop="25dp"
                 android:text="Nombre completo:"
                 android:textSize="15dp"
@@ -41,13 +39,13 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="5dp"
                 android:text="Karla Vanessa Garcia Faustino"
                 android:textSize="15dp"
                 android:textStyle="normal" />
 
             <ImageView
-                android:layout_width="152dp"
+                android:layout_width="125dp"
                 android:layout_height="98dp"
                 android:layout_gravity="right"
                 android:layout_marginTop="-50dp"
@@ -56,7 +54,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="5dp"
                 android:layout_marginTop="25dp"
                 android:text="Nombre completo:"
                 android:textSize="15dp"
@@ -65,13 +63,13 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="5dp"
                 android:text="Christian Josue Morales Alvares"
                 android:textSize="15dp"
                 android:textStyle="normal" />
 
             <ImageView
-                android:layout_width="152dp"
+                android:layout_width="125dp"
                 android:layout_height="98dp"
                 android:layout_gravity="right"
                 android:layout_marginTop="-50dp"
@@ -80,7 +78,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="5dp"
                 android:layout_marginTop="25dp"
                 android:text="Nombre completo:"
                 android:textSize="15dp"
@@ -89,13 +87,13 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="5dp"
                 android:text="Carlos Daniel Privado Urbina"
                 android:textSize="15dp"
                 android:textStyle="normal" />
 
             <ImageView
-                android:layout_width="152dp"
+                android:layout_width="125dp"
                 android:layout_height="98dp"
                 android:layout_gravity="right"
                 android:layout_marginTop="-50dp"
@@ -104,7 +102,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="5dp"
                 android:layout_marginTop="25dp"
                 android:text="Nombre completo:"
                 android:textSize="15dp"
@@ -113,13 +111,13 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="5dp"
                 android:text="Walmer Esteban Guido Martinez"
                 android:textSize="15dp"
                 android:textStyle="normal" />
 
             <ImageView
-                android:layout_width="152dp"
+                android:layout_width="125dp"
                 android:layout_height="98dp"
                 android:layout_gravity="right"
                 android:layout_marginTop="-50dp"
@@ -128,7 +126,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="5dp"
                 android:layout_marginTop="25dp"
                 android:text="Nombre completo:"
                 android:textSize="15dp"
@@ -137,13 +135,13 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="5dp"
                 android:text="Isaura Mariela Castro Sanchez"
                 android:textSize="15dp"
                 android:textStyle="normal" />
 
             <ImageView
-                android:layout_width="152dp"
+                android:layout_width="125dp"
                 android:layout_height="98dp"
                 android:layout_gravity="right"
                 android:layout_marginTop="-50dp"
@@ -152,22 +150,18 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="5dp"
                 android:layout_marginTop="10dp"
                 android:text="Sistemas 22 A"
                 android:textSize="20dp"
                 android:textStyle="bold" />
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="10dp"
-                android:text="Sistemas 22 A"
-                android:textSize="20dp"
-                android:textStyle="bold" />
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="30dp"
+                />
+        </LinearLayout>
 
-        </androidx.appcompat.widget.LinearLayoutCompat>
     </ScrollView>
 
 </FrameLayout>
