--- a/app/src/main/res/layout/fragment_lista_categorias.xml
+++ b/app/src/main/res/layout/fragment_lista_categorias.xml
@@ -13,11 +13,12 @@
 
         <Button
             android:id="@+id/btnNueva"
-            android:layout_width="214dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Nueva Categoria"
+            android:layout_marginRight="30dp"
+            android:layout_marginLeft="30dp"
             android:background="@drawable/button_stilos"
-            android:layout_marginLeft="200dp"
             android:textSize="20dp" />
 
     </LinearLayout>
@@ -28,13 +29,13 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="75dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-    </androidx.recyclerview.widget.RecyclerView>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="RtlCompat" />
 
 </RelativeLayout>
