--- a/app/src/main/res/layout/fragment_lista_usuario.xml
+++ b/app/src/main/res/layout/fragment_lista_usuario.xml
@@ -13,13 +13,13 @@
 
         <Button
             android:id="@+id/btnNuevoUsu"
-            android:layout_width="214dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Nuevo Usuario"
             android:layout_marginTop="10dp"
-            android:layout_marginRight="30dp"
             android:background="@drawable/button_stilos"
-            android:layout_marginLeft="200dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginLeft="30dp"
             android:textSize="20dp" />
 
     </LinearLayout>
@@ -30,7 +30,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="75dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="8dp"
