--- a/app/src/main/res/layout/list_reciclerviewpro.xml
+++ b/app/src/main/res/layout/list_reciclerviewpro.xml
@@ -18,9 +18,9 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:layout_width="169dp"
-                android:layout_height="497dp">
-
+                android:layout_width="134dp"
+                android:layout_height="189dp"
+                android:layout_marginTop="100dp">
             </ImageView>
 
             <LinearLayout
