--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -13,7 +13,7 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark"
     >
 
-    <ImageView
+ <!--   <ImageView
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -36,5 +36,5 @@
         android:layout_height="wrap_content"
         android:text="@string/nav_header_subtitle"
         android:textColor="#000"
-        android:background="#ffff"/>
+        android:background="#ffff"/>-->
 </LinearLayout>
