--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -25,6 +25,11 @@
             android:icon="@drawable/ic_usuario"
             android:title="Lista de Usuario" />
 
+        <item
+            android:id="@+id/acerca"
+            android:icon="@drawable/ic_usu"
+            android:title="Integrantes" />
+
 
     </group>
 </menu>
