--- a/app/src/main/res/layout/fragment_list_reciclerview.xml
+++ b/app/src/main/res/layout/fragment_list_reciclerview.xml
@@ -38,7 +38,8 @@
                     android:layout_marginTop="5dp"
                     android:text="ID_CATEGORIA"
                     android:textColor="#000"
-                    android:textSize="15dp" />
+                    android:textSize="15dp"
+                    />
 
                 <TextView
                     android:id="@+id/tv_idCat"
@@ -49,7 +50,8 @@
                     android:hint="ID_CATEGORIA"
                     android:textColor="#000"
                     android:textSize="15dp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:background="#CE89F8"/>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -69,7 +71,8 @@
                     android:hint="NOMBRE_CATEGORIA"
                     android:textColor="#000"
                     android:textSize="15dp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:background="#CE89F8"/>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -78,7 +81,8 @@
                     android:layout_marginTop="10dp"
                     android:text="ESTADO_CATEGORIA"
                     android:textColor="#000"
-                    android:textSize="15dp" />
+                    android:textSize="15dp"
+                    />
 
                 <TextView
                     android:id="@+id/tv_EstadoCat"
@@ -89,7 +93,9 @@
                     android:hint="ESTADO_CATEGORIA"
                     android:textColor="#000"
                     android:textSize="15dp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:background="#CE89F8"
+                    />
                 <!--
                                 <LinearLayout
                                     android:layout_width="match_parent"
