--- a/app/src/main/res/layout/list_reciclerviewusu.xml
+++ b/app/src/main/res/layout/list_reciclerviewusu.xml
@@ -17,9 +17,11 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:layout_width="116dp"
-                android:layout_height="169dp"
-                android:layout_marginTop="150dp">
+                android:layout_width="96dp"
+                android:layout_height="550dp"
+                android:layout_marginTop="10dp"
+                android:src="@drawable/usuario">
+
 
             </ImageView>
 
@@ -45,7 +47,8 @@
                     android:layout_marginTop="5dp"
                     android:textColor="#000"
                     android:textSize="15dp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:background="#CE89F8"/>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -64,7 +67,8 @@
                     android:layout_marginTop="5dp"
                     android:textColor="#000"
                     android:textSize="15dp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:background="#CE89F8"/>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -83,7 +87,8 @@
                     android:layout_marginTop="5dp"
                     android:textColor="#000"
                     android:textSize="15dp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:background="#CE89F8"/>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -102,7 +107,8 @@
                     android:layout_marginTop="5dp"
                     android:textColor="#000"
                     android:textSize="15dp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:background="#CE89F8"/>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -121,7 +127,8 @@
                     android:layout_marginTop="5dp"
                     android:textColor="#000"
                     android:textSize="15dp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:background="#CE89F8"/>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -130,7 +137,8 @@
                     android:layout_marginTop="10dp"
                     android:text="CLAVE"
                     android:textColor="#000"
-                    android:textSize="15dp" />
+                    android:textSize="15dp"
+                    />
 
                 <TextView
                     android:id="@+id/tv_ClaveUsu"
@@ -140,7 +148,8 @@
                     android:layout_marginTop="5dp"
                     android:textColor="#000"
                     android:textSize="15dp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:background="#CE89F8"/>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -149,7 +158,8 @@
                     android:layout_marginTop="10dp"
                     android:text="TIPO"
                     android:textColor="#000"
-                    android:textSize="15dp" />
+                    android:textSize="15dp"
+                    />
 
                 <TextView
                     android:id="@+id/tv_TipoUsu"
@@ -159,7 +169,8 @@
                     android:layout_marginTop="5dp"
                     android:textColor="#000"
                     android:textSize="15dp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:background="#CE89F8"/>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -178,7 +189,8 @@
                     android:layout_marginTop="5dp"
                     android:textColor="#000"
                     android:textSize="15dp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:background="#CE89F8"/>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -199,7 +211,8 @@
                     android:inputType=""
                     android:textColor="#000"
                     android:textSize="15dp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:background="#CE89F8"/>
 
                 <TextView
                     android:layout_width="match_parent"
@@ -208,7 +221,8 @@
                     android:layout_marginTop="10dp"
                     android:text="RESPUESTA"
                     android:textColor="#000"
-                    android:textSize="15dp" />
+                    android:textSize="15dp"
+                    />
 
                 <TextView
                     android:id="@+id/tv_RespuestaUsu"
@@ -218,7 +232,8 @@
                     android:layout_marginTop="5dp"
                     android:textColor="#000"
                     android:textSize="15dp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                    android:background="#CE89F8"/>
 
 
             </LinearLayout>
