--- a/app/src/main/res/layout/list_reciclerviewusu.xml
+++ b/app/src/main/res/layout/list_reciclerviewusu.xml
@@ -18,9 +18,10 @@
 
             <ImageView
                 android:layout_width="96dp"
-                android:layout_height="550dp"
+                android:layout_height="673dp"
                 android:layout_marginTop="10dp"
-                android:src="@drawable/usuario">
+                android:src="@drawable/ic_usu"
+                android:background="#EFB3FF">
 
 
             </ImageView>
