--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -30,6 +30,11 @@
             android:icon="@drawable/ic_usu"
             android:title="Integrantes" />
 
+        <item
+            android:id="@+id/login"
+            android:icon="@drawable/ic_back"
+            android:title="Cerrar Sesion" />
+
 
     </group>
 </menu>
