--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,22 +13,18 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="25dp"
-            android:layout_marginRight="25dp"
-            android:gravity="center"
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginVertical="20dp"
             android:orientation="vertical">
-
 
 
             <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="151dp"
                 android:layout_height="113dp"
-                android:layout_marginBottom="40dp"
-                app:srcCompat="@drawable/itca"
-                tools:ignore="VectorDrawableCompat" />
-
-
+                android:layout_gravity="center"
+                android:layout_marginTop="150dp"
+                app:srcCompat="@drawable/itca" />
 
             <EditText
                 android:id="@+id/ET_USU"
@@ -36,9 +32,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
+                android:layout_marginTop="10dp"
                 android:backgroundTint="@android:color/darker_gray"
                 android:drawableLeft="@drawable/ic_usu"
-                android:ems="10"
                 android:hint="Usuario"
                 android:inputType="textPersonName"
                 android:paddingLeft="5dp" />
@@ -48,7 +44,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginEnd="8dp"
                 android:backgroundTint="@android:color/darker_gray"
                 android:drawableLeft="@drawable/ic_contra"
