--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="@drawable/itca"
     android:gravity="bottom"
     android:orientation="vertical"
+    android:background="@drawable/side_nav_bar"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -13,28 +13,28 @@
     android:theme="@style/ThemeOverlay.AppCompat.Dark"
     >
 
- <!--   <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/nav_header_desc"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+ <ImageView
+     android:id="@+id/imageView"
+     android:layout_width="wrap_content"
+     android:layout_height="99dp"
+     android:contentDescription="@string/nav_header_desc"
+     android:paddingTop="@dimen/nav_header_vertical_spacing"
+     app:srcCompat="@drawable/itca" />
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="@string/nav_header_title"
+        android:text=""
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="#000"
         android:background="#ffff"/>
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/nav_header_subtitle"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:text=""
         android:textColor="#000"
-        android:background="#ffff"/>-->
+        android:background="#ffff"/>
 </LinearLayout>
